@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

class Agency {
id
designation
emailAddress
phoneNumber
}

class Announcement{
id
acceptanceDate
saleDate
}

class Property{
 area
 distanceCityCenter
}

class Request{
id
requestDate
justificationMessage
}


Agency "1" -- "*" Announcement: owns >
Property "1" -- "1" Request : < has information about
Announcement "1" - "1" Request : is based on >
Agency "1" - "*" Request : is assigned to >
Agency "1" --- "*" Announcement: owns >
NetworkManager "1" - "*" Announcement: analyzes >
NetworkManager "1" -- "1" Network: manages >
Agency "1..*" -- "1" Network: is part of >


@enduml